# bergson

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
bergson/: __init__.py  __main__.py  attributor.py  build.py  callback.py  collection.py  data.py  faiss_index.py  gradcheck.py  gradients.py  huggingface.py  math.py  peft.py  processing.py  utils.py
data/: dataset.py  finetune.py
data/names/: employer.txt  first_name.txt  town.txt  university.txt
data/templates/: birthdate.txt  birthplace.txt  employer.txt  university.txt
examples/: adafactor_timing.py  build_index.py  filter_data.py  pythia.py  query_index.py  trainer_grad_collection.py  trainer_gradient_collection.py
quelle/: __init__.py  data.py  gradients.py  utils.py
quelle/approx-unrolling/: developing.ipynb
quelle/approx_unrolling/: EK_FAC.py  build_index.py  developing.ipynb  distributed.py  language_task.py  logger_config.py  model_checkpoints.py  pile_data.py  test.py  unrolling.py  utils.py
tests/: test_build.py  test_callback.py  test_gradcheck.py  test_gradients.py  test_shrinkage.py
