[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quelle"
description = "Tracing the Quelle (source) of neural net behaviors with data attribution"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["interpretability", "explainable-ai"]
license = {text = "MIT License"}
dependencies = [
    "accelerate",   # For device_map in from_pretrained
    "datasets",
    "torch",
    "transformers",
]
version = "0.0.1"
[project.optional-dependencies]
dev = [
    "pre-commit",
]

[tool.pyright]
include = ["quelle*"]
reportPrivateImportUsage = false

[tool.setuptools.packages.find]
include = ["quelle*"]

[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
# See https://beta.ruff.rs/docs/rules/ for more possible rules
lint.select = ["E", "F", "I"]
# Same as Black.
line-length = 88
